[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tokcut"
version = "0.1.0"
description = "Personal auto-editor for vertical TikTok clips (speed-ramp + caption + music)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "vyahello", email = "vyahello@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.8"]
bot = ["python-telegram-bot>=21"]

[project.scripts]
tokcut = "tokcut.cli:main"
tokcut-bot = "tokcut.bot.app:main"

[project.urls]
Homepage = "https://github.com/vyahello/tokcut"

[tool.setuptools.packages.find]
include = ["tokcut*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = ["tokcut"]
